--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,30 +1,12 @@
-<html>
-    <head>
-        <title>Roshan blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Roshan Blog</a></h1>
+{% extends 'blog/base.html' %}
+{% block content %}
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            <p>published: {{ post.published_date }}</p>
         </div>
-
-        <div>
-
-            {% for x in posts %}
-            <div>
-                <p>published:{{x.published_date}}</p>
-                <h2><a href="">{{x.title }}</a></h2>
-                <p>{{ x.text|linebreaksbr}}</p>
-            </div>
-            {% endfor %}
-        </div>
-        <div>
-            {% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h2><a href="">{{ post.title }}</a></h2>
+        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endfor %}
-        </div>
-    </body>
-</html>
+{% endblock %}
